Extract example generation into own module (#460)
This commit extracts test utilities and example generation code into a separate `test-utils` module to improve code organization and reusability. The refactoring moves common test infrastructure from `server-plugin` to a dedicated module that can be shared across the project.

Key changes:
- Created new `test-utils` module with shared test utilities and base test classes
- Moved and refactored `Neo4jTestCase` and `AbstractApiTest` to the new module
- Consolidated utility methods from `Neo4jTestUtils` into `SpatialTestUtils`
- Updated all test classes to use the new module structure
- Added example data files (shapefile and OSM) for documentation generation